# pre-commit-maven

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
integration/: conftest.py  test_maven.py  test_maven_checkstyle.py  test_maven_compile.py  test_maven_goals.py  test_maven_spotless_apply.py  test_maven_spotless_check.py  test_maven_test.py  utils.py
integration/resources/badexample/: pom.xml
integration/resources/badexample/src/main/java/com/badexample/: App.java
integration/resources/badexample_checkstyle_fails/: pom.xml
integration/resources/badexample_checkstyle_fails/src/main/java/com/goodexample/: App.java
integration/resources/badexample_checkstyle_fails/src/site/: site.xml
integration/resources/badexample_doesnot_compile/src/main/java/com/badexample/: App.java
integration/resources/badexample_with_bad_test/: pom.xml
integration/resources/badexample_with_bad_test/src/site/: site.xml
integration/resources/goodexample/: pom.xml
integration/resources/goodexample_checkstyle/: pom.xml
integration/resources/goodexample_with_mvnw/: pom.xml
pre_commit_maven/: maven.py  maven_checkstyle.py  maven_compile.py  maven_goals.py  maven_spotless_apply.py  maven_spotless_check.py  maven_test.py
pre_commit_maven/utils/: generic_main.py  maven.py  shell.py
tests/: test_maven.py  test_maven_checkstyle.py  test_maven_compile.py  test_maven_spotless_apply.py  test_maven_spotless_check.py  test_maven_test.py
tests/utils/: test_maven.py  test_maven_goals.py
(+5 files in other folders)
