[metadata]
name = pre-commit-maven
version = 0.0.1
description = pre-commit hook that wraps maven

[options]
packages = find:
python_requires = >=3.7
install_requires =
    ruamel.yaml>=0.15
    toml

[options.entry_points]
console_scripts =
    maven = pre_commit_maven.maven:main
    maven-compile = pre_commit_maven.maven_compile:main
    maven-test = pre_commit_maven.maven_test:main
    maven-checkstyle = pre_commit_maven.maven_checkstyle:main
    maven-spotless-check = pre_commit_maven.maven_spotless_check:main
    maven-spotless-apply = pre_commit_maven.maven_spotless_apply:main

[options.packages.find]
exclude =
    tests*
    integration*

[coverage:run]
plugins = covdefaults

[bdist_wheel]
universal = True
